[Background Fetch] Show paused fetches on browser restart.

Paused fetch notifications were not displayed on browser start-up. This
means that the fetch could not be resumed and is forever paused.

The state of the entry needs to be exposed on DS initialization, so
that paused items can notify the OfflineContentAggregator and display a
notification.

Bug: 889423
Change-Id: Ia61c903f6234264821aad20b7bb93d6a3fdeb447
Reviewed-on: https://chromium-review.googlesource.com/c/1251630
Reviewed-by: Peter Beverloo <peter@chromium.org>
Reviewed-by: David Trainor <dtrainor@chromium.org>
Reviewed-by: Min Qin <qinmin@chromium.org>
Commit-Queue: Rayan Kanso <rayankans@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597204}
Former-commit-id: ab12365a90c4ad675152a616462129d411696529